--- a/tts.css
+++ b/tts.css
@@ -33,5 +33,13 @@ i:hover{
 }
 
 #main-container{
-    padding: 0 6rem;
+    padding: 8rem 10rem;
+}
+
+#controls{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    /* padding: 3rem 6rem; */
+    justify-content: space-evenly;
 }
